styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: burlywood;
}

h1 {
  text-align: center;
  font-size: 75px;
  margin: 10px;
  font-family: Simplifica;
}

h2 {
  text-align: center;
  font-size: 25px;
  margin: 10px;
}

em {
  font-style: normal;
}

figure {
  display: inline-block;
  margin-left: 15px;
  margin-right: 15px;
  text-align: center;
}

figcaption,
p {
  font-family: monospace;
  font-size: 14px;
  text-align: center;
  margin: 5px;
}

.box {
  border: 5px;
  border-color: black;
}

.container {
  display: inline-flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-left: 10%;
  margin-right: 10%;
  width: 80%;
  justify-content: center;
  align-items: flex-start;
}

.headerthree,
.header,
.jump,
.footer {
  text-align: center;
  margin: 15px;
  display: block;
}

.header {
  display: flex;
  margin-left: 25%;
  margin-right: 25%;
  justify-content: space-between;
}

.fishsprite {
  width: 75px;
  height: 75px;
  image-rendering: pixelated;
  object-fit: cover;
}

